--- a/frontend/src/component/header/Header.css
+++ b/frontend/src/component/header/Header.css
@@ -6,6 +6,7 @@
   width: calc(100vw - 100px);
   padding-left: 50px;
   padding-right: 50px;
+  background-color: rgba(88, 204, 210, 0.66);
 }
 
 .Header_Left {
