--- a/frontend/src/mainStyle.css
+++ b/frontend/src/mainStyle.css
@@ -96,7 +96,10 @@
   border-radius: 50%;
 }
 .box-shadow-gray {
-  box-shadow: 0px 0px 10px gray;
+  box-shadow: 0px 0px 10px #b6f21d;
+}
+.box-shadow-gray {
+  box-shadow: 0px 0px 10px #cbdaf0a8;
 }
 
 .gap-5 {
