--- a/frontend/src/mainStyle.css
+++ b/frontend/src/mainStyle.css
@@ -96,10 +96,10 @@
   border-radius: 50%;
 }
 .box-shadow-gray {
-  box-shadow: 0px 0px 10px #b6f21d;
+  box-shadow: 0px 0px 10px gray;
 }
-.box-shadow-gray {
-  box-shadow: 0px 0px 10px #cbdaf0a8;
+.box-shadow-something {
+  box-shadow: 0px 0px 10px #769ce8;
 }
 
 .gap-5 {
