--- a/frontend/src/mainStyle.css
+++ b/frontend/src/mainStyle.css
@@ -99,7 +99,7 @@
   box-shadow: 0px 0px 10px gray;
 }
 .box-shadow-something {
-  box-shadow: 0px 0px 10px #5896cf;
+  box-shadow: 0px 0px 10px #0000006c;
 }
 
 .gap-5 {
